--- a/style.css
+++ b/style.css
@@ -218,3 +218,22 @@ a:visited {
 .cycling-popup .leaflet-popup-content-wrapper {
   border-left: 5px solid var(--color-brand--1);
 }
+
+.centerBtns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 5px;
+}
+
+.btn-reset {
+  background-color: var(--color-brand--1);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.3rem;
+}
